# MSG-Platform

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  alembic.ini  docker-compose.yml  pyproject.toml  start.sh  一键启动.bat  部署说明.txt
.claude/: progress.md  questions.md
.claude/adr/: 000-template.md  001-database.md  002-config.md  003-logging.md
.github/workflows/: ci.yml
configs/: _schema.json  config.yaml  test_quadriga_small.json
configs/data/: default.yaml  sionna_rt.yaml
configs/eval/: default.yaml
configs/infer/: default.yaml
configs/model/: default.yaml
configs/train/: default.yaml
docs/: ChannelHub平台说明书.docx  data-processing-report.md  data_flow_and_training.html  gen_channel_modeling_doc.py  gen_figures.py  gen_manual.js  interference-implementation.html  plan-interference-aware-pipeline.md  platform-guide.md  platform-presentation-rebuilt.html  platform-presentation.html  platform-presentation.html.bak  self-review-round3.md  ~$生成与采集-物理层建模梳理.docx  信道生成与采集-物理层建模梳理.docx
docs/refactor/: 01-current-state.md  02-doc-code-gaps.md  03-target-architecture.md  04-migration-plan.md  99-questions.md
exports/: msg_export_train_hdf5.h5  msg_export_train_hdf5_manifest.parquet
matlab/: _config_shard0000.json  apply_interference.m  assign_pci_hypercell.m  compute_doppler_dynamic.m  dl_csirs_pipeline.m  dl_precoding_svd.m  export_channel_sample.m  gen_channel_multicell.m  gen_hex_positions.m  gen_linear_positions.m  gen_topology.m  generate_track_mobility.m  generate_train_positions.m  get_bw_row.m  main_multi.m  place_ues.m  srs_accumulated_rb_indices.m  srs_bw_table.m  srs_hopping.m  srs_hopping_cycle_length.m  srs_rb_indices.m  ssb_measurement.m  tdd_slot_config.m  ul_srs_pipeline.m
platform/: __init__.py
platform/backend/: __init__.py  db.py  main.py  settings.py
platform/deploy/: .env.example  (+3 more)
scripts/: generate_report_ppt.py  post_quadriga_pipeline.py  run_bridge.py  run_dataset_export.py  run_end_to_end.py  run_eval.py  run_export.py  run_finetune.py  run_full_pipeline.py  run_infer.py  run_quadriga_real.py  run_report.py  run_simulate.py  run_train.py
tests/: conftest.py
(+250 files in other folders)
