[build-system]
requires = ["setuptools>=68", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "msg-embedding"
version = "1.0.0.dev0"
description = "5G NR channel representation learning via MAE + contrastive learning"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2",
    "numpy>=2.0",
    "scipy>=1.11",
    "pydantic>=2.5",
    "pydantic-settings>=2.0",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "structlog>=24.0",
    "matplotlib>=3.8",
    "tqdm>=4.66",
    "h5py>=3.10",
    "hdf5storage>=0.2",
    "pandas>=2.1",
    "pyarrow>=15.0",
    "pillow>=10.0",
]

[project.optional-dependencies]
platform = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "dramatiq[redis]>=1.17",
    "redis>=5.0",
]
dev = [
    "ruff>=0.6",
    "black>=24.0",
    "mypy>=1.8",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-timeout>=2.2",
    "httpx>=0.27",
    "pre-commit>=3.6",
]
gpu = [
    "torch>=2.2",
]
sionna = [
    "sionna>=2.0",
]

[project.scripts]
msg-train = "scripts.run_train:main"
msg-eval = "scripts.run_eval:main"
msg-infer = "scripts.run_infer:main"
msg-export = "scripts.run_export:main"
msg-simulate = "scripts.run_simulate:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]
"**/__init__.py" = ["F401"]
"platform/backend/routes/**" = ["B008"]
"platform/backend/services/**" = ["SIM105"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "slow: marks tests as slow",
    "gpu: marks tests requiring GPU",
    "matlab: marks tests requiring MATLAB",
    "sionna: marks tests requiring Sionna",
]
addopts = "-ra --strict-markers"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
check_untyped_defs = true
warn_return_any = false
warn_unused_configs = true
